# offline-tarteel

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  EXPERIMENTS.md  LICENSE  PLAN.md  README.md  REPORT.md  RESEARCH-audio-to-verse.md  codex.toml  pyproject.toml  requirements.txt  web-demo-spec.md
autoresearch/: monitor.sh  prepare.py  program.md  run.sh  setup.sh  train.py
benchmark/: augment_v3_corpus.py  build_v3_corpus.py  curate_corpus.py  run_single.py  runner.py  tlog_filter_v3.py
benchmark/results/: latest.json  (+3 more)
data/: rabah-ctc-pruned-report.json
scripts/: add_long_multi_samples.py  benchmark.py  benchmark_streaming_endpoint.py  build_phoneme_kenlm.py  build_phoneme_web_data.py  build_rabah_pruned_models.py  download_reference_audio.py  eval_lora.py  export_onnx.py  export_phoneme_onnx.py  export_phoneme_onnx_modal.py  export_r15_onnx_modal.py  fetch_quran_text.py  prepare_training_data.py  quantize_pruned_models.py  test_acoustic_matching.py  test_improved_matching.py  train_contrastive_v2_modal.py  train_ctc_base_modal.py  train_ctc_modal.py  train_distill_modal.py  train_fastconformer_phoneme_modal.py  train_lora.py  train_modal.py  train_nvidia_fastconformer_modal.py  train_pruned_ctc_modal.py  update_manifest_sequences.py  validate_phoneme_onnx_modal.py  validate_phoneme_streaming_modal.py
shared/: __init__.py  audio.py  quran_db.py  streaming.py  verse_tracker.py
tests/: test_al_asr.py  test_quran_db.py  test_scoring.py  test_streaming_pipeline.py  test_transcribe.py  test_verse_tracker.py
web/: server.py  test_ws_audio.py
(+152 files in other folders)
